fix: too high width leads to scrollbar vertical

--- a/src/css/master.scss
+++ b/src/css/master.scss
@@ -22,7 +22,7 @@ header {
   flex-direction: row;
   flex-wrap: wrap;
   gap: 0;
-  width: 100vw;
+  width: 100%;
   justify-content: center;
   align-items: center;
   position: sticky;
